Add swagger docs
