# api/resthandlers/pictures.go
@@ -28,6 +28,17 @@ func NewPicturesHandler(picturesService service.PicturesService) PicturesHandler
 	return &picturesHandler{svc: picturesService}
 }
 
+// Save an image
+// @Summary save an image
+// @Description Given a image file, save it in database and get its computed metadata
+// @Accept			multipart/form-data
+//
+//	@Param			image	formData	file			true	"upload image file"
+//
+// @Success 201 {object} dto.SinglePictureResponse
+// @Failure 400 {object} dto.GeneralErrorResponse
+// @Failure 500 {object} dto.GeneralErrorResponse
+// @Router / [post]
 func (h *picturesHandler) CreatePicture(c *gin.Context) {
 	file, err := c.FormFile("image")
 	if err != nil {
@@ -35,13 +46,13 @@ func (h *picturesHandler) CreatePicture(c *gin.Context) {
 		return
 	}
 
-	response, createError := h.svc.Create(file)
+	createdPicture, createError := h.svc.Create(file)
 	if createError != nil {
 		restutil.WriteError(c, createError.StatusCode, createError.Error, createError.Data)
 		return
 	}
 
-	restutil.WriteAsJson(c, http.StatusOK, gin.H{"data": response})
+	restutil.WriteAsJson(c, http.StatusCreated, dto.SinglePictureResponse{Data: createdPicture})
 }
 
 func (h *picturesHandler) UpdatePicture(c *gin.Context) {
@@ -69,9 +80,10 @@ func (h *picturesHandler) UpdatePicture(c *gin.Context) {
 // List of pictures
 // @Summary list of pictures
 // @Description List of pictures along with its metadata
-// @Param page query string false "page number starting from 1" Format(number)
+// @Param page query number false "page number starting from 1" Format(number)
 // @Success 200 {object} dto.ListPicturesResponse
-// @Failure 500 {object} error
+// @Failure 400 {object} dto.GeneralErrorResponse
+// @Failure 500 {object} dto.GeneralErrorResponse
 // @Router / [get]
 func (h *picturesHandler) ListPictures(c *gin.Context) {
 	pageSize := 10
@@ -114,7 +126,8 @@ func (h *picturesHandler) ListPictures(c *gin.Context) {
 // @Description Get a specified image file by its ID
 // @Param id path number true "Image Id"
 // @Success 200 {file} octet-stream
-// @Failure 500 {object} error
+// @Failure 400 {object} dto.GeneralErrorResponse
+// @Failure 404 {object} dto.GeneralErrorResponse
 // @Router /picture/{id}/image [get]
 func (h *picturesHandler) GetPictureFile(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
@@ -125,13 +138,21 @@ func (h *picturesHandler) GetPictureFile(c *gin.Context) {
 
 	pictureDestination, err := h.svc.GetFile(id)
 	if err != nil {
-		restutil.WriteError(c, http.StatusInternalServerError, err, nil)
+		restutil.WriteError(c, http.StatusNotFound, err, nil)
 		return
 	}
 
 	http.ServeFile(c.Writer, c.Request, pictureDestination)
 }
 
+// Get a single image data
+// @Summary get a single image data
+// @Description Get a specified image with its metadata by its ID
+// @Param id path number true "Image Id"
+// @Success 200 {object} dto.SinglePictureResponse
+// @Failure 400 {object} dto.GeneralErrorResponse
+// @Failure 404 {object} dto.GeneralErrorResponse
+// @Router /picture/{id} [get]
 func (h *picturesHandler) GetPicture(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -141,13 +162,21 @@ func (h *picturesHandler) GetPicture(c *gin.Context) {
 
 	picture, err := h.svc.Get(id)
 	if err != nil {
-		restutil.WriteError(c, http.StatusInternalServerError, err, nil)
+		restutil.WriteError(c, http.StatusNotFound, err, nil)
 		return
 	}
 
-	restutil.WriteAsJson(c, http.StatusOK, gin.H{"data": picture})
+	restutil.WriteAsJson(c, http.StatusOK, dto.SinglePictureResponse{Data: picture})
 }
 
+// Delete a single image
+// @Summary delete a single image
+// @Description Delete a specified image along with its metadata by its ID
+// @Param id path number true "Image Id"
+// @Success 200 {object} dto.StringResponse
+// @Failure 400 {object} dto.GeneralErrorResponse
+// @Failure 500 {object} dto.GeneralErrorResponse
+// @Router /picture/{id} [delete]
 func (h *picturesHandler) DeletePicture(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -160,5 +189,5 @@ func (h *picturesHandler) DeletePicture(c *gin.Context) {
 		return
 	}
 
-	restutil.WriteAsJson(c, http.StatusOK, gin.H{"data": true})
+	restutil.WriteAsJson(c, http.StatusOK, dto.StringResponse{Message: "Successfully deleted"})
 }
